# MassHunterLibToQuant

./: .codespellrc  .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
.github/workflows/: ci.yml
apps/: CMakeLists.txt  LibraryToCSV.cpp  LibraryToQuant.cpp  LibraryToScore.cpp
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
include/: base64.hpp  defines.inc.hpp  types.hpp
include/models/: compound.hpp  library.hpp  method.hpp  spectrum.hpp
source/: base64.cpp  lib.cpp  lib.hpp  main.cpp  tocsv.cpp
source/models/: compound.cpp  library.cpp  method.cpp  spectrum.cpp
test/: CMakeLists.txt
test/source/: Library.cpp  MassHunterLibToQuant_test.cpp
